--- a/screens/about/index.html
+++ b/screens/about/index.html
@@ -26,12 +26,31 @@
             </a>
             <div class="nav">
                 <a class="nav-item" href="index.html">Sobre nós</a>
-                <a class="nav-item" href="../menu/index.html">Menu</a>
-                <a class="nav-item" href="../menu/index.html">Menu</a>
+                <a class="nav-item" href="../sale/index.html">Cardapio</a>
+                <a class="nav-item" href="../menu/index.html">Receitas</a>
                 <a class="nav-item" href="../contact/index.html">Contato</a>
             </div>
         </div>
         <h1 class="title">Bell Soupie</h1>
+        <p class="text">A confeitaria oferece entrega em toda a região e também tem opções para revenda de pequenos
+            negócios, o que torna o site um verdadeiro aliado para aqueles que desejam iniciar um empreendimento na
+            área de confeitaria ou simplesmente complementar o cardápio de sua loja.</p>
+        <p class="text">No site da Bell Soupie, os clientes podem encontrar uma variedade de receitas, dicas e
+            truques para aprimorar suas habilidades culinárias e agradar a todos com sobremesas irresistíveis. Desde
+            sobremesas clássicas até receitas inovadoras, a confeitaria tem um vasto acervo que pode ser explorado
+            pelos visitantes do site.</p>
+        <p class="text">Além disso, a Bell Soupie tem um blog onde compartilha novidades, tendências e eventos
+            relacionados à confeitaria. Os clientes também podem acompanhar a empresa nas redes sociais e ficar por
+            dentro de todas as novidades, promoções e descontos.</p>
+        <p class="text">O site da Bell Soupie é um verdadeiro ponto de encontro para os amantes de doces. Com uma
+            grande variedade de opções, desde bolos e tortas até doces finos e chocolates, a confeitaria é a escolha
+            perfeita para quem deseja surpreender seus convidados ou simplesmente degustar uma sobremesa de
+            qualidade.</p>
+        <p class="text">Se você está procurando uma confeitaria de qualidade, com uma grande variedade de produtos e
+            opções de entrega, o site da Bell Soupie é o lugar certo para você. Com uma navegação simples e
+            intuitiva, você pode escolher seus doces favoritos e recebê-los em sua casa ou revender em seu pequeno
+            negócio. Além disso, com as receitas e dicas disponíveis no site, você pode aprimorar suas habilidades
+            culinárias e se tornar um expert em confeitaria.</p>
     </div>
 </body>
 
