--- a/screens/sale/index.html
+++ b/screens/sale/index.html
@@ -26,8 +26,8 @@
             </a>
             <div class="nav">
                 <a class="nav-item" href="../about/index.html">Sobre nós</a>
-                <a class="nav-item" href="../sale/index.html">Cardapio</a>
-                <a class="nav-item" href="index.html">Receitas</a>
+                <a class="nav-item" href="index.html">Cardapio</a>
+                <a class="nav-item" href="../menu/index.html">Receitas</a>
                 <a class="nav-item" href="../contact/index.html">Contato</a>
             </div>
         </div>
