--- a/screens/contact/index.html
+++ b/screens/contact/index.html
@@ -32,6 +32,21 @@
             </div>
         </div>
         <h1 class="title">Bell Soupie</h1>
+        <h2 class="subtitle">Entre em contato conosco!</h2>
+        <div class="content">
+            <form>
+                <label for="name">Nome:</label>
+                <input type="text" name="name" id="name">
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email">
+                <label for="message">Mensagem:</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <input type="submit" value="Enviar">
+            </form>
+            <div class="vizualizer">
+                <img src="../../assets/logo.png" alt="logo" width="200px" height="200px">
+            </div>
+        </div>
     </div>
 </body>
 
