--- a/screens/about/index.html
+++ b/screens/about/index.html
@@ -51,6 +51,7 @@
             intuitiva, você pode escolher seus doces favoritos e recebê-los em sua casa ou revender em seu pequeno
             negócio. Além disso, com as receitas e dicas disponíveis no site, você pode aprimorar suas habilidades
             culinárias e se tornar um expert em confeitaria.</p>
+        <img src="../../assets/logo.png" alt="logo" width="400px" height="400px">
     </div>
 </body>
 
