logo fix and menu

--- a/screens/menu/index.html
+++ b/screens/menu/index.html
@@ -7,7 +7,7 @@
     <title>Bell Soupie</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./styles.css'>
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/logo.png" type="image/x-icon">
     <script src='main.js'></script>
 </head>
 
@@ -32,6 +32,97 @@
             </div>
         </div>
         <h1 class="title">Bell Soupie</h1>
+        <div class="content">
+            <div class="item">
+                <img src="../../assets/cake01.jpeg" alt="1">
+                <div>
+                    <h1 class="item-title">Bolo de chocolate</h1>
+                    <p class="item-text">4 ovos</p>
+                    <p class="item-text">4 colheres (sopa) de chocolate em pó</p>
+                    <p class="item-text">2 colheres (sopa) de manteiga</p>
+                    <p class="item-text">3 xícaras (chá) de farinha de trigo</p>
+                    <p class="item-text">2 xícaras (chá) de açúcar</p>
+                    <p class="item-text">2 colheres (sopa) de fermento</p>
+                    <p class="item-text">1 xícara (chá) de leite</p>
+                    <a href="https://www.tudogostoso.com.br/receita/62547-a-melhor-receita-de-bolo-de-chocolate.html"
+                        target="_blank">Receita completa aqui</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake02.jpeg" alt="2">
+                <div>
+                    <h1 class="item-title">Bolo de cenoura</h1>
+                    <p class="item-text">3 cenouras médias raspadas e picadas</p>
+                    <p class="item-text">4 ovos</p>
+                    <p class="item-text">1 xícara (chá) de óleo</p>
+                    <p class="item-text">2 xícaras (chá) de açúcar</p>
+                    <p class="item-text">3 xícaras (chá) de farinha de trigo</p>
+                    <p class="item-text">1 colher (sopa) de fermento em pó</p>
+                    <a href="https://www.tudogostoso.com.br/receita/23-bolo-de-cenoura.html" target="_blank">Receita
+                        completa aqui</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake03.jpeg" alt="1">
+                <div>
+                    <h1 class="item-title">Bolo de fubá</h1>
+                    <p class="item-text">3 ovos</p>
+                    <p class="item-text">1 xícara (chá) de óleo</p>
+                    <p class="item-text">2 xícaras (chá) de açúcar</p>
+                    <p class="item-text">3 xícaras (chá) de leite</p>
+                    <p class="item-text">2 xícaras (chá) de fubá</p>
+                    <p class="item-text">1 xícara (chá) de farinha de trigo</p>
+                    <p class="item-text">1 colher (sopa) de fermento em pó</p>
+                    <a href="https://www.tudogostoso.com.br/receita/9254-bolo-de-fuba.html" target="_blank">Receita
+                        completa aqui</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake04.jpeg" alt="2">
+                <div>
+                    <h1 class="item-title">Bolo de laranja</h1>
+                    <p class="item-text">4 ovos</p>
+                    <p class="item-text">1 laranja</p>
+                    <p class="item-text">1/2 xícara (chá) de óleo</p>
+                    <p class="item-text">2 xícaras (chá) de açúcar</p>
+                    <p class="item-text">2 xícaras (chá) de farinha de trigo</p>
+                    <p class="item-text">1 colher (sopa) de fermento em pó</p>
+                    <a href="https://www.tudogostoso.com.br/receita/24-bolo-de-laranja.html" target="_blank">Receita
+                        completa aqui</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake05.jpeg" alt="1">
+                <div>
+                    <h1 class="item-title">Bolo de limão</h1>
+                    <p class="item-text">4 ovos</p>
+                    <p class="item-text">1 xícara (chá) de óleo</p>
+                    <p class="item-text">1 xícara (chá) de leite</p>
+                    <p class="item-text">2 xícaras (chá) de açúcar</p>
+                    <p class="item-text">3 xícaras (chá) de farinha de trigo</p>
+                    <p class="item-text">1 colher (sopa) de fermento em pó</p>
+                    <p class="item-text">raspas da casca de 1 limão</p>
+                    <p class="item-text">suco de 1 limão</p>
+                    <a href="https://www.tudogostoso.com.br/receita/142872-bolo-de-limao.html" target="_blank">Receita
+                        completa aqui</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake06.jpeg" alt="2">
+                <div>
+                    <h1 class="item-title">Bolo de matcha</h1>
+                    <p class="item-text">3 ovos</p>
+                    <p class="item-text">1 xícara (chá) de óleo</p>
+                    <p class="item-text">1 xícara (chá) de leite</p>
+                    <p class="item-text">2 xícaras (chá) de açúcar</p>
+                    <p class="item-text">3 xícaras (chá) de farinha de trigo</p>
+                    <p class="item-text">1 colher (sopa) de fermento em pó</p>
+                    <p class="item-text">1 colher (sopa) de matcha</p>
+                    <a href="https://www.tudoreceitas.com/receita-de-bolo-de-matcha-2103.html" target="_blank">Receita
+                        completa aqui</a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
