--- a/screens/about/index.html
+++ b/screens/about/index.html
@@ -7,7 +7,7 @@
     <title>Bell Soupie</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./styles.css'>
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/logo.png" type="image/x-icon">
     <script src='main.js'></script>
 </head>
 
