--- a/screens/sale/index.html
+++ b/screens/sale/index.html
@@ -32,6 +32,62 @@
             </div>
         </div>
         <h1 class="title">Bell Soupie</h1>
+        <div class="content">
+            <div class="item">
+                <img src="../../assets/cake01.jpeg" alt="1">
+                <div>
+                    <h1 class="item-title">Bolo de chocolate</h1>
+                    <p class="item-text">R$ 20,00</p>
+                    <a href="../menu/index.html" target="_blank" rel="noopener noreferrer">Confira a receita aqui</a>
+                    <button class="item-button">Comprar</button>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake02.jpeg" alt="2">
+                <div>
+                    <h1 class="item-title">Bolo de morango</h1>
+                    <p class="item-text">R$ 20,00</p>
+                    <a href="../menu/index.html" target="_blank" rel="noopener noreferrer">Confira a receita aqui</a>
+                    <button class="item-button">Comprar</button>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake03.jpeg" alt="1">
+                <div>
+                    <h1 class="item-title">Bolo de cenoura</h1>
+                    <p class="item-text">R$ 20,00</p>
+                    <a href="../menu/index.html" target="_blank" rel="noopener noreferrer">Confira a receita aqui</a>
+                    <button class="item-button">Comprar</button>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake04.jpeg" alt="2">
+                <div>
+                    <h1 class="item-title">Bolo de laranja</h1>
+                    <p class="item-text">R$ 20,00</p>
+                    <a href="../menu/index.html" target="_blank" rel="noopener noreferrer">Confira a receita aqui</a>
+                    <button class="item-button">Comprar</button>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake05.jpeg" alt="1">
+                <div>
+                    <h1 class="item-title">Bolo de limão</h1>
+                    <p class="item-text">R$ 20,00</p>
+                    <a href="../menu/index.html" target="_blank" rel="noopener noreferrer">Confira a receita aqui</a>
+                    <button class="item-button">Comprar</button>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../../assets/cake06.jpeg" alt="2">
+                <div>
+                    <h1 class="item-title">Bolo de maracujá</h1>
+                    <p class="item-text">R$ 20,00</p>
+                    <a href="../menu/index.html" target="_blank" rel="noopener noreferrer">Confira a receita aqui</a>
+                    <button class="item-button">Comprar</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
